--- a/app/views/site/root.html.erb
+++ b/app/views/site/root.html.erb
@@ -1,11 +1,19 @@
-<h1>Routing correctly</h1>
-<div id="navbar"></div>
-<div id="feeds-index-bar"></div>
-<div id="main-content"></div>
+<h1>I'm Root.html.erb</h1>
+<div id="navbar">I'm navbar div</div>
+<div id="feeds-index-bar">I'm the feeds index</div>
+<div id="main-content">I'm main content</div>
 
 <script>
+
 $(document).ready(function(){
-  var current_user = "<%= current_user.to_json %>";
-  Breedly.initialize({ current_user_id: current_user_id });
+  Breedly.CURRENT_USER = {
+    id: "<%= current_user.id %>",
+    username: "<%= current_user.username %>",
+    real_name: "<%= current_user.real_name %>",
+    age: "<%= current_user.age %>",
+    age_range: "<%= current_user.age_range %>",
+    feed_url: "<%= current_user.feed_url %>"    
+  };
+  Breedly.initialize();
 });
 </script>
