--- a/app/assets/templates/users/update.jst.ejs
+++ b/app/assets/templates/users/update.jst.ejs
@@ -1,19 +1,19 @@
 <h1>Update Your Profile</h1>
 <form id="user-update">
   <label for="username">Username:</label>
-  <input id="username" type="text" name="user[username]" value="<%= user.userData['username'] %>">
+  <input id="username" type="text" name="user[username]" value="<%= user.escape('username') %>">
   <br>
   <label for="real-name">Your Name:</label>
-  <input id="real-name" type="text" name="user[real_name]" value="<%= user.userData['real_name'] %>">
+  <input id="real-name" type="text" name="user[real_name]" value="<%= user.escape('real_name') %>">
   <br>
   <label for="age">Age:</label>
-  <input id="age" type="text" name="user[age]" value="<%= user.userData['age'] %>">
+  <input id="age" type="text" name="user[age]" value="<%= user.escape('age') %>">
   <br>
-  <label for="age_range">How far from your age do you want to see?</label>
-  <input id="age_range" type="text" name="user[age_range]" value="<%= user.userData['age_range'] %>">
+  <label for="age_range">Age range (from your own):</label>
+  <input id="age_range" type="text" name="user[age_range]" value="<%= user.escape('age_range') %>">
   <br>
   <label for="feed_url">Update Your Feed:</label>
-  <input id="feed_url" type="text" name="user[feed_url]" value="<%= user.userData['feed_url'] %>">
+  <input id="feed_url" type="text" name="user[feed_url]" value="<%= user.escape('feed_url') %>">
   <br>
   <button class="submit">Update!</button>
 </form>
