--- a/app/assets/templates/users/update.jst.ejs
+++ b/app/assets/templates/users/update.jst.ejs
@@ -12,8 +12,9 @@
   <label for="age_range">Age range (from your own):</label>
   <input id="age_range" type="text" name="user[age_range]" value="<%= user.escape('age_range') %>">
   <br>
-  <label for="feed_url">Update Your Feed:</label>
-  <input id="feed_url" type="text" name="user[feed_url]" value="<%= user.escape('feed_url') %>">
-  <br>
   <button class="submit">Update!</button>
 </form>
+
+<label for="feed_url">Add a new Feed:</label>
+<input id="feed_url" type="text" name="feed[url]">
+<button class="add-feed">Add Feed</button>
