remove all user feed_url refs and get all user update and new functionality working again

--- a/app/assets/templates/users/update.jst.ejs
+++ b/app/assets/templates/users/update.jst.ejs
@@ -15,6 +15,6 @@
   <button class="submit">Update!</button>
 </form>
 
-<label for="feed_url">Add a new Feed:</label>
-<input id="feed_url" type="text" name="feed[url]">
+<label for="feed-url">Add a new Feed:</label>
+<input id="feed-url" type="text" name="feed[url]">
 <button class="add-feed">Add Feed</button>
