--- a/app/views/site/root.html.erb
+++ b/app/views/site/root.html.erb
@@ -11,8 +11,7 @@ $(document).ready(function(){
     username: "<%= current_user.username %>",
     real_name: "<%= current_user.real_name %>",
     age: "<%= current_user.age %>",
-    age_range: "<%= current_user.age_range %>",
-    feed_url: "<%= current_user.feed_url %>"    
+    age_range: "<%= current_user.age_range %>"
   };
   Breedly.initialize();
 });
