--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,3 +1,69 @@
-#navbar, #feeds-index-bar, #main-content {
+/* reset */
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre,a, abbr, acronym, address, big, cite, code,del, dfn, em, img, ins, kbd, q, s, samp,small, strike, strong, sub, sup, tt, var,b, u, i, center,dl, dt, dd, ol, ul, li,fieldset, form, label, legend,table, caption, tbody, tfoot, thead, tr, th, td,article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary,time, mark, audio, video { margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;}article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {display: block;}body { line-height: 1; }ol, ul {list-style: none;}blockquote, q {quotes: none;}blockquote:before, blockquote:after,q:before, q:after {content: '';content: none;}table {border-collapse: collapse;border-spacing: 0;}
+
+form input {
+  background-color: transparent;
+  font: inherit; 
+  cursor: default;
+  display: inline-block;
+}
+
+input[type='text'], input[type='password'] {
+  cursor: text;
+}
+
+html {
+  font-family: 'Monaco' monospace;
+}
+
+h1 {
+  font-size: 3em;
+  margin: 10px;
+  padding: 10px;
+  text-align: center;
+}
+
+h2 {
+  font-size: 2em;
+}
+
+
+/* positioning for containers  */
+#navbar, #feeds-index, #main-content {
   border: thin solid black;
+}
+
+#feeds-index, #main-content {
+  margin-top: 1px;
+}
+
+#navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 50px;
+  width: 100%;
+}
+
+#feeds-index {
+  position: fixed;
+  top: 50px;
+  left:0;
+  width: 15%;
+  height:95%;
+}
+
+#main-container {
+  position: fixed;
+  top: 50px;
+  left: 15%;
+  width: 100%;
+  height: 100%;
+  margin-left: 1px;
+}
+
+#main-content {
+  position: relative;
+  width: inherit;
+  height: inherit;
 }
