complete feeds index and root composite view

--- a/app/assets/templates/root.jst.ejs
+++ b/app/assets/templates/root.jst.ejs
@@ -1,2 +1,9 @@
-<h1>got to root</h1>
-<button id="update-user-button">Update my profile</button>
+<div id="navbar">
+navnavnav
+</div>
+<div id="feeds-index"></div>
+<div id="main-container">
+  <div id="main-content">
+    <button id="update-user-button">Update my profile</button>
+  </div>
+</div>
