--- a/app/views/site/root.html.erb
+++ b/app/views/site/root.html.erb
@@ -1,11 +1,4 @@
-<div id="navbar">
-  <%= link_to 'Log Out', session_url, method: :delete, form_class: "logout-btn btn" %>
-</div>
-<div id="feeds-index">I'm the feeds index</div>
-<div id="main-container">
-  <div id="main-content">I'm main content</div>
-</div>
-
+<div id="all-content"></div>
 <script>
 $(document).ready(function(){
   Breedly.CURRENT_USER = {
