--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,10 @@ html {
   font-family: 'Monaco' monospace;
 }
 
+a {
+  text-decoration: none;
+}
+
 h1 {
   font-size: 3em;
   margin: 10px;
@@ -35,6 +39,7 @@ h2 {
 
 #feeds-index, #main-content {
   margin-top: 1px;
+  overflow: scroll;
 }
 
 #navbar {
