--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,6 +31,11 @@ h2 {
   font-size: 2em;
 }
 
+h3 {
+  font-size: 1.5em;
+  text-align: center;
+}
+
 
 /* positioning for containers  */
 #navbar, #feeds-index, #main-content {
