--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -90,3 +90,26 @@ h3 {
   margin-top: 1px;
   text-align: center;
 }
+
+/* modals */
+
+.modal-background {
+  background: rgba(0, 0, 0, .50); 
+  position: absolute;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
+  z-index: 1;
+}
+
+.modal-content {
+  position: absolute;
+  border: thick solid red;
+  border-radius: 10px;
+  background-color: white;
+  padding: 20px;
+  z-index: 2;
+  top: 25%;
+  left: 25%;
+}
