--- a/app/assets/templates/users/update.jst.ejs
+++ b/app/assets/templates/users/update.jst.ejs
@@ -1,22 +1,24 @@
-<h1>Update Your Profile</h1>
-<form id="user-update">
-  <label for="username">Username:</label>
-  <input id="username" type="text" name="user[username]" value="<%= user.escape('username') %>">
-  <br>
-  <label for="real-name">Your Name:</label>
-  <input id="real-name" type="text" name="user[real_name]" value="<%= user.escape('real_name') %>">
-  <br>
-  <label for="age">Age:</label>
-  <input id="age" type="number" name="user[age]" value="<%= user.escape('age') %>">
-  <br>
-  <label for="age_min">Minimum target age:</label>
-  <input id="age_min" type="number" name="user[age_min]" value="<%= user.escape('age_min') %>">
-  <label for="age_max">Max target age:</label>
-  <input id="age_max" type="number" name="user[age_max]" value="<%= user.escape('age_max') %>">
-  <br>
-  <button class="submit">Update!</button>
-</form>
+<div class="modal-background"></div>
+<div class="modal-content">
+  <button class="close">&times;</button>
+  <h1>Update Your Profile</h1>
+  <form id="user-update">
+    <label for="username">Username:</label>
+    <input id="username" type="text" name="user[username]" value="<%= user.escape('username') %>">
+    <br>
+    <label for="real-name">Your Name:</label>
+    <input id="real-name" type="text" name="user[real_name]" value="<%= user.escape('real_name') %>">
+    <br>
+    <label for="age">Age:</label>
+    <input id="age" type="number" name="user[age]" value="<%= user.escape('age') %>">
+    <br>
+    <label for="age_min">Minimum target age:</label>
+    <input id="age_min" type="number" name="user[age_min]" value="<%= user.get('age_min') %>">
 
-<label for="feed-url">Add a new Feed:</label>
-<input id="feed-url" type="text" name="feed[url]">
-<button class="add-feed">Add Feed</button>
+    <label for="age_max">Max target age:</label>
+    <input id="age_max" type="number" name="user[age_max]" value="<%= user.get('age_max') %>">
+    <br>
+    <button class="submit">Update!</button>
+  </form>
+</div>
+
