--- a/app/assets/templates/root.jst.ejs
+++ b/app/assets/templates/root.jst.ejs
@@ -1,9 +1,5 @@
-<div id="navbar">
-navnavnav
-</div>
-<div id="feeds-index"></div>
-<div id="main-container">
-  <div id="main-content">
-    
+  <div id="navbar"></div>
+  <div id="feeds-index"></div>
+  <div id="main-container">
+    <div id="main-content"></div>
   </div>
-</div>
