--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<img class="logo logo-full" src="<%= asset_path('logo_full.png') %>">
 <%= yield %>
 </body>
 </html>
