--- a/app/assets/templates/navbar.jst.ejs
+++ b/app/assets/templates/navbar.jst.ejs
@@ -1,2 +1,3 @@
-<button id="update-user-btn">Update my profile</button>
+<button id="update-user-btn">Update my Profile</button>
 <button id="add-feed-btn">Add a Feed</button>
+<button id="logout-btn">Log Out</button>
