--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,33 +1,93 @@
 /* reset */
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre,a, abbr, acronym, address, big, cite, code,del, dfn, em, img, ins, kbd, q, s, samp,small, strike, strong, sub, sup, tt, var,b, u, i, center,dl, dt, dd, ol, ul, li,fieldset, form, label, legend,table, caption, tbody, tfoot, thead, tr, th, td,article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary,time, mark, audio, video { margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;}article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {display: block;}body { line-height: 1; }ol, ul {list-style: none;}blockquote, q {quotes: none;}blockquote:before, blockquote:after,q:before, q:after {content: '';content: none;}table {border-collapse: collapse;border-spacing: 0;}
-form input {
+body { font-family: 'Oxygen', sans-serif; }
+
+/* forms */
+form { padding: 20px; }
+form input[type="number"] { width: 50px; }
+button { -webkit-appearance: none; }
+
+form input, input {
   background-color: transparent;
   font: inherit; 
   cursor: default;
   display: inline-block;
-}
-
-form {
-  padding: 20px;
-}
-
-input[type='text'], input[type='password'] {
+  padding-left: 10px;
   cursor: text;
 }
 
-html {
-  font-family: 'Oxygen', sans-serif;
+form.auth-form input {
+  color: #EBEBEB;
 }
+
+.auth-form, #user-update {
+  padding: 0;
+  display: block;
+  font-size: 1.2em;
+}
+
+.auth-form input, #user-update input, input#feed-url {
+  margin: 10px;
+  border: none;
+  border-bottom: thin solid #EBEBEB; 
+  border-radius: 5px;
+}
+
+/* buttons */
+
+.btn {
+  color: black;
+  border: none;
+  font-size: 0.9em;
+  border-radius: 5px;
+  padding: 10px;
+  font-family: 'Oxygen', sans-serif;
+  color: black;
+  cursor: pointer;
+  box-shadow: 0 0 10px black;
+  background-color: rgba(235,235,235,0.3);
+}
+
+.btn:focus, .btn:hover {
+  outline: none;
+  border: 2px solid #EBEBEB;
+  box-shadow: 0 0 10px #EBEBEB;
+  background-color: rgba(235,235,235,0.6);
+}
+
+.nav-btn {
+  float: right;
+  background: none;
+}
+
+input:focus, input:hover {
+  outline: none;
+  box-shadow: 0 0 10px #EBEBEB;
+}
+
+
+.close {
+  border: none;
+  background: none;
+  cursor: pointer;
+  float: right;
+  font-size: 1.0em;
+  color: #AA1111;
+}
+
+/* TODO learn how to fix scrolling lockup on resize */
 
 a {
   text-decoration: none;
   margin: 10px;
+  margin-left: 20px;
   color: black;
   display: block;
 }
 
-a:hover {
+a:hover, a:focus, a:active {
   color: red;
+  outline: none;
   text-shadow: 0 0 10px black;
 }
 
@@ -40,6 +100,7 @@ h1 {
 
 h2 {
   font-size: 2em;
+  text-align: center;
 }
 
 h3 {
@@ -48,7 +109,7 @@ h3 {
 }
 
 .auth-screen {
-  background: radial-gradient(#AA1111, rgba(170,17,17,.1));
+  background: radial-gradient(at top, black, rgba(235,235,235,0.9));
   position: fixed;
   left: 0;
   right: 0;
@@ -57,35 +118,9 @@ h3 {
   text-align: center;
 }
 
-.auth-form {
-  padding: 0;
-  display: block;
-  font-size: 1.2em;
+.auth-screen a {
+  display: inline-block;
 }
-
-.auth-form input {
-  margin: 10px;
-  border: none;
-  border-bottom: thin solid black; 
-  border-radius: 5px;
-}
-
-.auth-form input.submit {
-  background: none;
-  box-shadow: 0 0 10px black;
-  background-color: rgba(235,235,235,0.1);
-}
-
-input.submit:hover {
-  box-shadow: 0 0 10px #EBEBEB;
-  background-color: rgba(235,235,235,0.15);
-}
-
-input:focus, input:hover {
-  outline: none;
-  box-shadow: 0 0 10px black;
-}
-
 
 /* positioning for containers  */
 
@@ -94,26 +129,22 @@ input:focus, input:hover {
   
 }
 
-#feeds-index {
-  margin-top: 1px;
-  overflow: scroll;
-}
-
 .feed-list {
-  margin-top: 80px;
+  margin-top: 100px;
 }
 
 #navbar {
   position: fixed;
-  background: linear-gradient(to bottom, #AA1111, rgba(170,17,17,0.1));
+  background: linear-gradient(to right, black, #AA1111 75%);
   top: 0;
   left: 0;
   height: 50px;
   width: 100%;
+  z-index: 2;
 }
 
 .logo {
-  /* transform stuff */
+  transition: all 1500ms;
 }
 
 .logo-full {
@@ -121,85 +152,109 @@ input:focus, input:hover {
   position: fixed;
   z-index: 2;
   left: 50%;
-  top: 0;
+  top: 10px;
   transform: translateX(-50%);
 }
 
-.logo_small {
-  width: 278px;
-  height: 127px;
-  position: relative;
-  z-index: 10;
-  margin-left: -25px;
-  margin-top: -20px;
+#feeds-index-container {
+  background: linear-gradient(to bottom, black, #60605F 75%, rgba(235,235,235,0));
+  position: fixed;
+  top: 0;
+  left:0;
+  width: 17%;
+  height: 100%;
+  overflow: scroll;
 }
 
 #feeds-index {
-  background: linear-gradient(to right, #AA1111, rgba(170,17,17,0.1));
-  position: fixed;
-  top: 30px;
-  left:0;
-  width: 15%;
-  height: 100%;
+  left: 0;
+  width: 90%;
 }
 
-#feeds-index h3 {
-  margin-top: 80px;
+#feeds-index a {
+  color: #EBEBEB;
+}
+
+#feeds-index a:hover {
+  color: #AA1111;
+  outline: none;
 }
 
 #main-container {
   position: fixed;
   top: 50px;
-  left: 15%;
-  width: 100%;
-  height: 100%;
-  overflow: scroll;
+  left: 17%;
+  width: 66%;
+  height: calc(100% - 50px);
+  background: linear-gradient(to bottom right, black, #AA1111);
 }
 
 #main-content {
   position: relative;
+  border: thin solid #EBEBEB;
+  border-left:thick solid #EBEBEB;
+  border-radius: 25px;
+  border-bottom-left-radius: 0px; 
+  border-bottom-right-radius: 0px; 
+  border-style: groove;
+  height: inherit;
+  background: linear-gradient(to right, white 80%, #EBEBEB);
+  overflow: scroll;
+  padding: 50px;
+}
+
+#main-content img {
+  margin-left: 50%;
+  transform: translateX(-50%);
+}
+
+#entries-index-container {
+  background: linear-gradient(to bottom, #AA1111 50%, black);
+  position: fixed;
+  top: 0;
+  left: 83%;
+  width: 17%;
+  height: 100%;
+  overflow: scroll;
+}
+
+#main-content a {
+  display: inline-block;
 }
 
 /* modals */
 
 .modal-background {
-  background: rgba(0, 0, 0, .50); 
+  background: rgba(0, 0, 0, 0.7); 
   position: absolute;
   top:0;
   bottom:0;
   left:0;
   right:0;
-  z-index: 1;
+  z-index: 4;
 }
 
 .modal-content {
   position: absolute;
-  border: thick solid red;
+  border: 2px solid #EBEBEB;
   border-radius: 10px;
-  background-color: white;
+  background: radial-gradient(at bottom, #EBEBEB, #60605F);
   padding: 20px;
-  z-index: 2;
+  z-index: 5;
   top: 20%;
   left: 50%;
+  box-shadow: 0 0 10px #EBEBEB;
   transform: translateX(-50%);
 }
 
-.submit, .add-feed, #update-user-btn, #add-feed-btn, #logout-btn {
-  text-align: center;
-  padding: 10px;
-  -webkit-appearance: none;
-  border: 2px solid black;
-  border-radius: 5px;
-  font-family: 'Oxygen', sans-serif;
-  cursor: pointer;
+.modal-content #user-update input, input#feed-url {
+  border-color: black;
+  border-bottom: thin solid black; 
 }
 
-#update-user-btn, #add-feed-btn, #logout-btn {
-  margin-top: 10px;
-  margin-left: 10px;
-  float:right;
+.modal-content button.btn {
+  display: block;
+  padding: 2px 10px 2px 10px;
+  margin: 20px auto 10px auto;
 }
 
-.submit:hover, .add-feed:hover, #update-user-btn:hover, #add-feed-btn:hover {
-  /*box-shadow: 0 0 10px black;*/
-}
