--- a/app/assets/templates/feeds/new_feed.jst.ejs
+++ b/app/assets/templates/feeds/new_feed.jst.ejs
@@ -2,7 +2,9 @@
 <div class="modal-content">
   <button class="close">&times;</button>
   <h3>Add A New Feed</h3>
+  <br>
   <label for="feed-url">Feed url:</label>
   <input id="feed-url" type="text" name="feed[url]">
-  <button class="add-feed">Submit!</button>
+  <br>
+  <button class="btn add-feed">Submit!</button>
 </div>
