--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,12 +1,20 @@
-/* reset */
+/* reset and basics */
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre,a, abbr, acronym, address, big, cite, code,del, dfn, em, img, ins, kbd, q, s, samp,small, strike, strong, sub, sup, tt, var,b, u, i, center,dl, dt, dd, ol, ul, li,fieldset, form, label, legend,table, caption, tbody, tfoot, thead, tr, th, td,article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary,time, mark, audio, video { margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;}article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {display: block;}body { line-height: 1; }ol, ul {list-style: none;}blockquote, q {quotes: none;}blockquote:before, blockquote:after,q:before, q:after {content: '';content: none;}table {border-collapse: collapse;border-spacing: 0;}
 body { font-family: 'Oxygen', sans-serif; }
-
-/* forms */
+h1{ font-size: 3em; margin: 10px; }
+h2 { font-size: 2em; }
+h3 { font-size: 1.5em; }
+h1, h2, h3 {
+  padding: 10px;
+  text-align: center;
+}
 form { padding: 20px; }
 form input[type="number"] { width: 50px; }
 button { -webkit-appearance: none; }
 
+/* #AA1111 #FFFFFF #EBEBEB #000000; */
+
+/* forms */
 form input, input {
   background-color: transparent;
   font: inherit; 
@@ -26,38 +34,13 @@ form.auth-form input {
   font-size: 1.2em;
 }
 
+.auth-form { color: #EBEBEB; }
+
 .auth-form input, #user-update input, input#feed-url {
   margin: 10px;
   border: none;
   border-bottom: thin solid #EBEBEB; 
   border-radius: 5px;
-}
-
-/* buttons */
-
-.btn {
-  color: black;
-  border: none;
-  font-size: 0.9em;
-  border-radius: 5px;
-  padding: 10px;
-  font-family: 'Oxygen', sans-serif;
-  color: black;
-  cursor: pointer;
-  box-shadow: 0 0 10px black;
-  background-color: rgba(235,235,235,0.3);
-}
-
-.btn:focus, .btn:hover {
-  outline: none;
-  border: 2px solid #EBEBEB;
-  box-shadow: 0 0 10px #EBEBEB;
-  background-color: rgba(235,235,235,0.6);
-}
-
-.nav-btn {
-  float: right;
-  background: none;
 }
 
 input:focus, input:hover {
@@ -66,46 +49,46 @@ input:focus, input:hover {
 }
 
 
+/* buttons */
+.btn {
+  outline: none;
+  color: black;
+  border: none;
+  font-size: 0.9em;
+  border-radius: 5px;
+  padding: 10px;
+  font-family: 'Oxygen', sans-serif;
+  cursor: pointer;
+  box-shadow: 0 0 10px black;
+  background: none;
+}
+
+.btn:focus, .btn:hover {
+  border: 2px solid #EBEBEB;
+  box-shadow: 0 0 10px #EBEBEB;
+  background-color: rgba(235,235,235,0.6);
+}
+
+.nav-btn {
+  float: right;
+}
+
 .close {
   border: none;
   background: none;
   cursor: pointer;
-  float: right;
+  position: fixed;
+  top: 0;
+  left: 96%;
   font-size: 1.0em;
   color: #AA1111;
-}
-
-/* TODO learn how to fix scrolling lockup on resize */
-
-a {
-  text-decoration: none;
-  margin: 10px;
-  margin-left: 20px;
-  color: black;
-  display: block;
+  margin: 0;
+  padding: 0;
 }
 
 a:hover, a:focus, a:active {
   color: red;
   outline: none;
-  text-shadow: 0 0 10px black;
-}
-
-h1 {
-  font-size: 3em;
-  margin: 10px;
-  padding: 10px;
-  text-align: center;
-}
-
-h2 {
-  font-size: 2em;
-  text-align: center;
-}
-
-h3 {
-  font-size: 1.5em;
-  text-align: center;
 }
 
 .auth-screen {
@@ -120,29 +103,10 @@ h3 {
 
 .auth-screen a {
   display: inline-block;
+  color: black;
 }
 
-/* positioning for containers  */
-
-/* #AA1111 #FFFFFF #EBEBEB #000000; */
-#navbar, #feeds-index, #main-content {
-  
-}
-
-.feed-list {
-  margin-top: 100px;
-}
-
-#navbar {
-  position: fixed;
-  background: linear-gradient(to right, black, #AA1111 75%);
-  top: 0;
-  left: 0;
-  height: 50px;
-  width: 100%;
-  z-index: 2;
-}
-
+/* logo */
 .logo {
   transition: all 1500ms;
 }
@@ -156,16 +120,42 @@ h3 {
   transform: translateX(-50%);
 }
 
-#feeds-index-container {
-  background: linear-gradient(to bottom, black, #60605F 75%, rgba(235,235,235,0));
+
+/* positioning for containers  */
+#navbar, #feeds-index-container, #main-container {
   position: fixed;
   top: 0;
-  left:0;
-  width: 17%;
-  height: 100%;
+  left: 0;
   overflow: scroll;
 }
 
+#navbar {
+  background: linear-gradient(to right, black, #AA1111 75%);
+  height: 50px;
+  width: 100%;
+  z-index: 2;
+  overflow: visible;
+  box-shadow: 0 5px 10px black;
+}
+
+#feeds-index-container {
+  background: linear-gradient(to bottom, black, #60605F 75%, rgba(235,235,235,0));
+  width: 17%;
+  height: 100%;
+  box-shadow: 5px 0 10px black;
+}
+
+#main-container {
+  top: 50px;
+  left: 17%;
+  width: 66%;
+  z-index: -1;
+  height: calc(100% - 50px);
+  background: linear-gradient(to bottom right, black, #AA1111);
+}
+
+
+/* feeds index */
 #feeds-index {
   left: 0;
   width: 90%;
@@ -173,30 +163,29 @@ h3 {
 
 #feeds-index a {
   color: #EBEBEB;
+  text-decoration: none;
+  margin: 10px;
+  margin-left: 20px;
+  display: block;
 }
 
-#feeds-index a:hover {
+#feeds-index a:hover, .auth-screen a:hover {
   color: #AA1111;
   outline: none;
+  text-shadow: 0 0 10px black;
 }
 
-#main-container {
-  position: fixed;
-  top: 50px;
-  left: 17%;
-  width: 66%;
-  height: calc(100% - 50px);
-  background: linear-gradient(to bottom right, black, #AA1111);
+.feed-list {
+  margin-top: 100px;
 }
 
+/* main content feed show */
 #main-content {
   position: relative;
   border: thin solid #EBEBEB;
-  border-left:thick solid #EBEBEB;
   border-radius: 25px;
   border-bottom-left-radius: 0px; 
   border-bottom-right-radius: 0px; 
-  border-style: groove;
   height: inherit;
   background: linear-gradient(to right, white 80%, #EBEBEB);
   overflow: scroll;
@@ -208,6 +197,12 @@ h3 {
   transform: translateX(-50%);
 }
 
+#main-content a {
+  display: inline-block;
+}
+
+
+/* entries */
 #entries-index-container {
   background: linear-gradient(to bottom, #AA1111 50%, black);
   position: fixed;
@@ -215,15 +210,12 @@ h3 {
   left: 83%;
   width: 17%;
   height: 100%;
+  box-shadow: -5px 0 10px black;
   overflow: scroll;
 }
 
-#main-content a {
-  display: inline-block;
-}
 
 /* modals */
-
 .modal-background {
   background: rgba(0, 0, 0, 0.7); 
   position: absolute;
@@ -236,14 +228,14 @@ h3 {
 
 .modal-content {
   position: absolute;
-  border: 2px solid #EBEBEB;
+  border: 3px outset #60605F;
   border-radius: 10px;
-  background: radial-gradient(at bottom, #EBEBEB, #60605F);
-  padding: 20px;
+  background: linear-gradient(#EBEBEB, #AFAFAF);
+  padding: 30px;
   z-index: 5;
   top: 20%;
   left: 50%;
-  box-shadow: 0 0 10px #EBEBEB;
+  box-shadow: 10px 10px 10px black;
   transform: translateX(-50%);
 }
 
@@ -257,4 +249,3 @@ h3 {
   padding: 2px 10px 2px 10px;
   margin: 20px auto 10px auto;
 }
-
