--- a/app/views/site/root.html.erb
+++ b/app/views/site/root.html.erb
@@ -5,13 +5,13 @@
 
 $(document).ready(function(){
   var logo = $('.logo');
-  logo.removeClass('logo-full');
   logo.css('width', '18%')
       .css('left', '0px')
       .css('top', '0')
       .css('z-index', '3')
       .css('position', 'relative');
-      debugger;
+  logo.removeClass('logo-full');
+  
   Breedly.CURRENT_USER_ID = "<%= current_user.id %>";
   Breedly.RAILS_ENV = "<%= Rails.env %>";
   Breedly.initialize();
@@ -20,8 +20,13 @@ $(document).ready(function(){
 
 <!-- questions for monday
   - how to start above transition on login success, not this page load
+    - or how to make it smooth
+  - how to justify or float input fields in modals
   
 
+
+  TODO:
+    -fix scrolling lockup on resize
 
 
  -->
