--- a/app/assets/templates/entries/entries_index.jst.ejs
+++ b/app/assets/templates/entries/entries_index.jst.ejs
@@ -1,5 +1,5 @@
 <ul class="entries-list">
-  <% entries.forEach(function(entry){ %>
-    <li data-id="<%= entry.entry_id %>"><%= entry.title %></li>
+  <% entries.forEach(function(idx, entry){ %>
+    <li data-idx="<%= idx %>" class="entry-list-item"><%= entry.title %></li>
   <% }); %>
 </ul>
