--- a/app/views/site/root.html.erb
+++ b/app/views/site/root.html.erb
@@ -22,11 +22,12 @@ $(document).ready(function(){
   - how to start above transition on login success, not this page load
     - or how to make it smooth
   - how to justify or float input fields in modals
-  
+  - how to monitor topics for uniqueness without downcasing or validating case insensitive
+  - transactions without rolling back
+  - how to display block but hover effect on text
 
 
   TODO:
     -fix scrolling lockup on resize
-
-
+    -remove description from topic table
  -->
