add mouseenter and leave events on index links, clean up feed validation and topic generation

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -63,6 +63,10 @@ input:focus, input:hover {
   background: none;
 }
 
+input.auth-btn {
+  background-color: rgba(235,235,235,0.3);;
+}
+
 .btn:focus, .btn:hover {
   border: 2px solid #EBEBEB;
   box-shadow: 0 0 10px #EBEBEB;
