--- a/app/assets/templates/feeds/feeds_index_item.jst.ejs
+++ b/app/assets/templates/feeds/feeds_index_item.jst.ejs
@@ -1,1 +1,3 @@
-<a href="#feeds/<%= feed.id %>"><%= feed.get('title') %></a>
+<div class="feed-list-item">
+  <a href="#feeds/<%= feed.id %>" class="feed-list-link"><%= feed.get('title') %></a>
+</div>
