--- a/app/views/shared/_user_form.html.erb
+++ b/app/views/shared/_user_form.html.erb
@@ -8,7 +8,7 @@
   <label for="password">Password: </label>
   <input type="password" id="password" name="user[password]">
   <br>
-  <input class="btn" style="color:black" type="submit" value="<%= action == session_url ? 'Sign In' : 'Sign Up' %>">
+  <input class="btn auth-btn" style="color:black" type="submit" value="<%= action == session_url ? 'Sign In' : 'Sign Up' %>">
 </form>
 
 <script>
