--- a/app/assets/templates/root.jst.ejs
+++ b/app/assets/templates/root.jst.ejs
@@ -3,6 +3,7 @@
     <div id="feeds-index"></div>
   </div>
   <div id="main-container">
+    <div id="main-overlay"></div>
     <div id="main-content"></div>
   </div>
   <div id="entries-index-container">
