--- a/app/views/site/root.html.erb
+++ b/app/views/site/root.html.erb
@@ -30,4 +30,5 @@ $(document).ready(function(){
   TODO:
     -fix scrolling lockup on resize
     -remove description from topic table
+    -put a constraint on image sizes
  -->
