--- a/app/assets/templates/navbar.jst.ejs
+++ b/app/assets/templates/navbar.jst.ejs
@@ -1,3 +1,4 @@
 <button id="logout-btn" class="btn nav-btn">Log Out</button>
 <button id="add-feed-btn" class="btn nav-btn">Add a Feed</button>
+<button id="user-topic-btn" class="btn nav-btn">Add an Interest</button>
 <button id="update-user-btn" class="btn nav-btn">Update my Profile</button>
