--- a/app/assets/templates/topics/new_topic.jst.ejs
+++ b/app/assets/templates/topics/new_topic.jst.ejs
@@ -3,8 +3,8 @@
   <button class="close">&times;</button>
   <h3>Add A New Interest</h3>
   <br>
-  <label for="topic-title">Topic name:</label>
+  <label for="topic-title">I want to see more:</label>
   <input id="topic-title" type="text" name="topic[title]">
   <br>
-  <button class="btn add-topic">Submit!</button>
+  <button class="btn add-user-topic">Submit!</button>
 </div>
