--- a/app/views/site/root.html.erb
+++ b/app/views/site/root.html.erb
@@ -31,4 +31,5 @@ $(document).ready(function(){
     -fix scrolling lockup on resize
     -remove description from topic table
     -put a constraint on image sizes
+    -add -webkit stuff for safari and firefox
  -->
