add a whirly and start removing content overlay div

--- a/app/assets/templates/feeds/feed_desc.jst.ejs
+++ b/app/assets/templates/feeds/feed_desc.jst.ejs
@@ -1,3 +1,4 @@
+<div class="modal-background"></div>
 <div class="feed-teaser">
   <h3><%= feed.get('description') %></h3>
     <% var topics = feed.topics(); %>
