--- a/app/views/shared/_user_form.html.erb
+++ b/app/views/shared/_user_form.html.erb
@@ -13,7 +13,7 @@
 
 <script>
   $(function() {
-      var mTop = ($('.logo').width() * 0.35);
+      var mTop = ($('.logo-full').width() * 0.35);
       $('.auth-form').css('margin-top', mTop);
       $('.auth-form #username').focus();
     });
