--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,7 @@ h1, h2, h3 {
 form { padding: 20px; }
 form input[type="number"] { width: 50px; }
 button { -webkit-appearance: none; }
+body { background-image: url("cubes.jpg"); }
 
 /* #AA1111 #FFFFFF #EBEBEB #000000; */
 
@@ -24,9 +25,13 @@ form input, input {
   cursor: text;
 }
 
-form.auth-form input {
-  color: #EBEBEB;
+.clearfix:after {
+  content: "";
+  display: block;
+  clear: both;
 }
+
+form.auth-form input { color: #EBEBEB; }
 
 .auth-form, #user-update {
   padding: 0;
@@ -40,7 +45,6 @@ form.auth-form input {
   margin: 10px;
   border: none;
   border-bottom: thin solid #EBEBEB; 
-  border-radius: 5px;
 }
 
 input:focus, input:hover {
@@ -48,23 +52,31 @@ input:focus, input:hover {
   box-shadow: 0 0 10px #EBEBEB;
 }
 
+#errors-and-whirly {
+  text-align: center;
+  z-index: 200;
+  margin-top: 100px;
+}
+
 
 /* buttons */
+.centered {
+  margin-left: 50%;
+  transform: translate(-50%);
+  -webkit-transform: translate(-50%);
+  -ms-transform: translate(-50%);
+}
+
 .btn {
   outline: none;
   color: black;
   border: none;
-  font-size: 0.9em;
-  border-radius: 5px;
+  font-size: 1.0em;
   padding: 10px;
   font-family: 'Oxygen', sans-serif;
   cursor: pointer;
   box-shadow: 0 0 10px black;
-  background: none;
-}
-
-input.auth-btn {
-  background-color: rgba(235,235,235,0.3);;
+  background-color: rgba(235,235,235,0.3);
 }
 
 .btn:focus, .btn:hover {
@@ -74,6 +86,7 @@ input.auth-btn {
 }
 
 .nav-btn {
+  background: none;
   float: right;
 }
 
@@ -96,7 +109,7 @@ a:hover, a:focus, a:active {
 }
 
 .auth-screen {
-  background: radial-gradient(at top, black, rgba(235,235,235,0.9));
+  background: radial-gradient(at top, black, rgba(235,235,235,0) 80%);
   position: fixed;
   left: 0;
   right: 0;
@@ -110,21 +123,6 @@ a:hover, a:focus, a:active {
   color: black;
 }
 
-/* logo */
-.logo {
-  transition: all 1500ms;
-}
-
-.logo-full {
-  width: 40%;
-  position: fixed;
-  z-index: 2;
-  left: 50%;
-  top: 10px;
-  transform: translateX(-50%);
-}
-
-
 /* positioning for containers  */
 #navbar, #feeds-index-container, #main-container {
   position: fixed;
@@ -134,7 +132,7 @@ a:hover, a:focus, a:active {
 }
 
 #navbar {
-  background: linear-gradient(to right, black, #AA1111 75%);
+  background: linear-gradient(to right, black, #AA1111);
   height: 50px;
   width: 100%;
   z-index: 2;
@@ -143,8 +141,8 @@ a:hover, a:focus, a:active {
 }
 
 #feeds-index-container {
-  background: linear-gradient(to bottom, black 55%, #60605F 90%, rgba(122,122,122,0.4));
   width: 17%;
+  background-color: black;
   height: 100%;
   box-shadow: 5px 0 10px black;
 }
@@ -155,9 +153,7 @@ a:hover, a:focus, a:active {
   width: 66%;
   z-index: -1;
   height: calc(100% - 50px);
-  background: linear-gradient(to bottom right, black, #AA1111);
 }
-
 
 /* feeds index */
 #feeds-index {
@@ -184,14 +180,10 @@ a:hover, a:focus, a:active {
 }
 
 /* main content feed show */
-#main-content, #main-overlay .feed-teaser {
+#main-content {
   position: relative;
   border: thin solid #EBEBEB;
-  border-radius: 25px;
-  border-bottom-left-radius: 0px; 
-  border-bottom-right-radius: 0px; 
   height: inherit;
-  background: linear-gradient(to right, white 80%, #EBEBEB);
   overflow: scroll;
   padding: 50px;
 }
@@ -221,7 +213,7 @@ a:hover, a:focus, a:active {
   display: inline;
 }
 
-#main-content div, #main-overlay div {
+#main-content div {
   font-size: 1em;
   text-align: center;
 }
@@ -234,7 +226,7 @@ a:hover, a:focus, a:active {
   margin: 20px 0 40px 0;
 }
 
-#main-content p, #main-overlay p {
+#main-content p {
   margin: 10px;
   font-size: 1.0em;
   text-indent: 40px;
@@ -243,7 +235,7 @@ a:hover, a:focus, a:active {
   text-align: left;
 }
 
-#main-overlay .feed-teaser {
+#main-content .feed-teaser {
   overflow: scroll;
   position: fixed;
   top: 50px;
@@ -252,27 +244,26 @@ a:hover, a:focus, a:active {
   bottom: 0;
   height: calc(100% - 150px);
   width: calc(66% - 100px);
-  z-index: 2;
+  z-index: 3;
   padding: 50px;
-  background: linear-gradient(to right, white 80%, #EBEBEB);
 }
 
-#main-content h3, #main-overlay h3 {
+#main-content h3 {
   color: #AA1111;
 }
 
-#main-content h4, #main-overlay h4 {
+#main-content h4 {
   font-size: 1.4em;
   margin: 15px;
 }
 
-#main-overlay .feed-teaser .btn, #main-content .feed-teaser .btn {
+#main-content .feed-teaser .btn {
   margin: 20px;
 }
 
 /* entries */
 #entries-index-container {
-  background: linear-gradient(to bottom, #AA1111 60%, black);
+  background-color: #AA1111;
   position: fixed;
   top: 0;
   left: 83%;
@@ -295,25 +286,30 @@ a:hover, a:focus, a:active {
   cursor: pointer;
 }
 
-#entries-index li:first-child {
+.entries-list h4, .feed-list h4 {
   margin-top: 80px;
+  text-align: center; 
+  font-size: 1.3em;
+}
+
+.feed-list h4 {
+  color: #EBEBEB;
 }
 
 /* modals */
 .modal-background {
-  background: rgba(0, 0, 0, 0.7); 
-  position: absolute;
+  background: url("cubes.jpg"); 
+  position: fixed;
   top:0;
   bottom:0;
   left:0;
   right:0;
-  z-index: 4;
+  z-index: 3;
 }
 
 .modal-content {
   position: absolute;
   border: 3px outset #60605F;
-  border-radius: 10px;
   background: linear-gradient(#EBEBEB, #AFAFAF);
   padding: 30px;
   z-index: 5;
@@ -332,4 +328,23 @@ a:hover, a:focus, a:active {
   display: block;
   padding: 2px 10px 2px 10px;
   margin: 20px auto 10px auto;
+}
+
+/* don't need to touch again */
+/* logo */
+.logo-small {
+  width: 17%;
+  left: 0;
+  top: 0;
+  z-index: 3;
+  position: relative;
+}
+
+.logo-full {
+  width: 40%;
+  position: fixed;
+  z-index: 2;
+  left: 50%;
+  top: 10px;
+  transform: translateX(-50%);
 }
