--- a/app/assets/templates/entries/entries_index.jst.ejs
+++ b/app/assets/templates/entries/entries_index.jst.ejs
@@ -1,4 +1,5 @@
 <ul class="entries-list">
+<h4>Entries</h4>
   <% entries && entries.forEach(function(entry, idx){ %>
     <li data-idx="<%= idx %>" class="entry-list-item"><%= entry.title %></li>
   <% }); %>
