--- a/app/assets/templates/root.jst.ejs
+++ b/app/assets/templates/root.jst.ejs
@@ -1,11 +1,14 @@
-  <div id="navbar"></div>
-  <div id="feeds-index-container">
-    <div id="feeds-index"></div>
-  </div>
-  <div id="main-container">
-    <div id="main-overlay"></div>
-    <div id="main-content"></div>
-  </div>
-  <div id="entries-index-container">
-    <div id="entries-index"></div>
-  </div>
+<div id="navbar"></div>
+
+<div id="feeds-index-container">
+  <div id="feeds-index"></div>
+</div>
+
+<div id="main-container">
+  <div id="errors-and-whirly"></div>
+  <div id="main-content"></div>
+</div>
+
+<div id="entries-index-container">
+  <div id="entries-index"></div>
+</div>
