user interests only generated when there is an exisiting feed with that topic, and add scoped uniqueness validations to UserTopics

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -52,7 +52,7 @@ input:focus, input:hover {
   box-shadow: 0 0 10px #EBEBEB;
 }
 
-#errors-and-whirly {
+#whirly {
   position: absolute;
   left: 50%;
   top: 30%;
@@ -90,6 +90,7 @@ input:focus, input:hover {
 .nav-btn {
   background: none;
   float: right;
+  color: #EBEBEB;
 }
 
 .close {
@@ -174,11 +175,10 @@ a:hover, a:focus, a:active {
 #feeds-index a:hover, .auth-screen a:hover {
   color: #AA1111;
   outline: none;
-  text-shadow: 0 0 10px black;
 }
 
 .feed-list {
-  margin-top: 100px;
+  margin-top: 80px;
 }
 
 /* main content feed show */
@@ -237,7 +237,7 @@ a:hover, a:focus, a:active {
   text-align: left;
 }
 
-#main-content .feed-teaser {
+#main-content .feed-desc {
   overflow: scroll;
   position: fixed;
   top: 50px;
@@ -259,14 +259,13 @@ a:hover, a:focus, a:active {
   margin: 15px;
 }
 
-#main-content .feed-teaser .btn {
+#main-content .feed-desc .btn {
   margin: 20px;
 }
 
 /* entries */
 #entries-index-container {
-  /*background-color: #AA1111;*/
-  background-color: black;
+  background-color: #AA1111;
   color: #EBEBEB;
   position: fixed;
   top: 0;
@@ -285,13 +284,14 @@ a:hover, a:focus, a:active {
 }
 
 #entries-index li:hover {
-  color: #EBEBEB;
-  text-shadow: 0 0 10px black;
+  color: black;
+  text-shadow: 0 0 10px #EBEBEB;
   cursor: pointer;
 }
 
 .feed-list h4 {
-  margin-top: 80px;
+  margin-top: 10px;
+  margin-bottom: 20px;
   text-align: center; 
   font-size: 1.3em;
 }
