--- a/app/assets/templates/feeds/feed_desc.jst.ejs
+++ b/app/assets/templates/feeds/feed_desc.jst.ejs
@@ -1,5 +1,6 @@
 <div class="modal-background"></div>
-<div class="feed-teaser">
+<div class="feed-desc">
+  <h2><%= feed.get('title') %></h2>
   <h3><%= feed.get('description') %></h3>
     <% var topics = feed.topics(); %>
     <h4>Topics</h4>
