--- a/app/assets/templates/root.jst.ejs
+++ b/app/assets/templates/root.jst.ejs
@@ -5,7 +5,9 @@
 </div>
 
 <div id="main-container">
-  <div id="errors-and-whirly"></div>
+  <div id="errors-main"></div>
+  <div id="success-main"></div>
+  <div id="whirly"></div>
   <div id="main-content"></div>
 </div>
 
