--- a/app/assets/templates/topics/new_topic.jst.ejs
+++ b/app/assets/templates/topics/new_topic.jst.ejs
@@ -4,8 +4,10 @@
   <button class="close">&times;</button>
   <h3>Add A New Interest</h3>
   <br>
-  <label for="topic-title">I want to see more:</label>
-  <input id="topic-title" type="text" name="topic[title]">
+  <div class="ui-widget">
+    <label for="topic-title">I want to see more:</label>
+    <input id="topic-title" type="text" name="topic[title]">
+  </div>
   <br>
   <button class="btn add-user-topic">Submit!</button>
 </div>
