fix feed and topic forms

--- a/app/assets/templates/feeds/feed_desc.jst.ejs
+++ b/app/assets/templates/feeds/feed_desc.jst.ejs
@@ -1,4 +1,4 @@
-<div class="modal-background"></div>
+<div class="desc-layer-bg"></div>
 <div class="feed-desc">
   <h2><%= feed.get('title') %></h2>
   <h3><%= feed.get('description') %></h3>
