--- a/app/assets/templates/feeds/new_feed.jst.ejs
+++ b/app/assets/templates/feeds/new_feed.jst.ejs
@@ -4,8 +4,10 @@
   <button class="close">&times;</button>
   <h3>Add A New Feed</h3>
   <br>
-  <label for="feed-url">Feed url:</label>
-  <input id="feed-url" type="text" name="feed[url]">
+  <div class="new-feed-block">
+    <label for="feed-url">Feed url:</label>
+    <input id="feed-url" type="text" name="feed[url]">
+    <button class="btn add-feed">Submit!</button>
+  </div>
   <br>
-  <button class="btn add-feed">Submit!</button>
 </div>
