--- a/app/assets/templates/topics/new_topic.jst.ejs
+++ b/app/assets/templates/topics/new_topic.jst.ejs
@@ -5,9 +5,10 @@
   <h3>Add A New Interest</h3>
   <br>
   <div class="ui-widget">
-    <label for="topic-title">I want to see more:</label>
-    <input id="topic-title" type="text" name="topic[title]">
+    <div class="new-topic-block">
+      <label for="topic-title">I want to see more:</label>
+      <input id="topic-title" type="text" name="topic[title]">
+      <button class="btn add-user-topic">Submit!</button>
+    </div>
   </div>
-  <br>
-  <button class="btn add-user-topic">Submit!</button>
 </div>
