--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -41,10 +41,61 @@ form.auth-form input { color: #EBEBEB; }
 
 .auth-form { color: #EBEBEB; }
 
-.auth-form input, #user-update input, input#feed-url, #topic-title {
+.auth-form input {
   margin: 10px;
   border: none;
   border-bottom: thin solid #EBEBEB; 
+}
+
+table tr td input#feed-url, table tr td input#topic-title, table tr td #user-update input {
+  border: none;
+  font-size: 0.8em;
+  border-bottom: 1px groove black;
+  border-radius: 5px;
+}
+
+input#topic-title.ui-autocomplete-input {
+  padding: 10px;
+}
+
+table tr td {
+  border: none;
+}
+
+table {
+  border: none;
+}
+
+table td {
+  text-align: left;
+  padding: 5px;
+}
+
+.new-feed-block {
+  display: block;
+}
+
+.new-feed-block label, .new-feed-block input, .new-feed-block button {
+  float: left;
+  margin-left: 20px;
+} 
+
+.new-feed-block label, .new-topic-block label {
+  margin-left: 20%;
+  font: inherit;
+  line-height: 3em;
+}
+
+#user-update .btn {
+  margin-top: 20px;
+}
+
+#user-update .btn:hover, button.add-feed:hover {
+  box-shadow: 0 0 10px #AA1111;
+}
+
+table tr {
+  border: none;
 }
 
 input:focus, input:hover {
@@ -83,16 +134,14 @@ input:focus, input:hover {
 
 /* autocomplete */
 
-ul.ui-widget-content {
-  /*display: block;*/
-  /*z-index: 5;*/
-  position: relative;
+li.ui-menu-item {
+  border: 1px solid gray;
+  margin-top: -1px;
 }
+
 .ui-autocomplete { 
   height: 100px; 
   width: 250px;
-  background-color: inherit;
-  border: thin solid black;
   overflow-y: scroll; 
   overflow-x: hidden;
 }
@@ -134,8 +183,8 @@ ul.ui-widget-content {
   background: none;
   cursor: pointer;
   position: fixed;
-  top: 0;
-  left: 96%;
+  top: 55px;
+  width: calc(66% - 55px);
   font-size: 1.0em;
   color: #AA1111;
   margin: 0;
@@ -245,10 +294,15 @@ a:hover, a:focus, a:active {
   transform: translateX(-50%);
   display: block;
   margin-bottom: 30px;
+  max-width: 75%;
 }
 
 #main-content a {
   display: inline;
+}
+
+.autocomplete {
+  z-index: 6;
 }
 
 #main-content div {
@@ -295,7 +349,7 @@ a:hover, a:focus, a:active {
   margin: 15px;
 }
 
-#main-content .feed-desc .btn {
+#main-content .feed-desc .btn, #main-content .modal-content .btn {
   margin: 20px;
 }
 
@@ -340,6 +394,16 @@ a:hover, a:focus, a:active {
 
 /* modals */
 .modal-background {
+  background-color: rgba(60, 60, 60, 0.85); 
+  position: fixed;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
+  z-index: 5;
+}
+
+.desc-layer-bg {
   background: url("cubes.jpg"); 
   position: fixed;
   top:0;
@@ -350,26 +414,18 @@ a:hover, a:focus, a:active {
 }
 
 .modal-content {
-  position: absolute;
-  border: 3px outset #60605F;
-  background: linear-gradient(#EBEBEB, #AFAFAF);
+  background: url("cubes.jpg"); 
+  position: fixed;
+  top: 50px;
+  left: 17%;
+  width: calc(66% - 60px);
+  bottom: 0;
+  z-index: 6;
   padding: 30px;
-  z-index: 5;
-  top: 20%;
-  left: 50%;
-  box-shadow: 10px 10px 10px black;
-  transform: translateX(-50%);
-}
-
-.modal-content #user-update input, input#feed-url, input#topic-title {
-  border-color: black;
-  border-bottom: thin solid black; 
-}
-
-.modal-content button.btn {
-  display: block;
-  padding: 2px 10px 2px 10px;
-  margin: 20px auto 10px auto;
+  text-align: center;
+  border: 2px solid #EBEBEB;
+  border-radius: 5px;
+  box-shadow: 0 0 10px #EBEBEB;
 }
 
 /* don't need to touch again */
