--- a/app/assets/templates/users/update.jst.ejs
+++ b/app/assets/templates/users/update.jst.ejs
@@ -3,22 +3,30 @@
   <button class="close">&times;</button>
   <h2>Update Your Profile</h2>
   <br>
-  <form id="user-update">
-    <label for="username">Username:</label>
-    <input id="username" type="text" name="user[username]" value="<%= user.escape('username') %>">
+    <form id="user-update">
+      <table class="centered">
+        <tr>
+          <td><label for="username">Username:</label></td>
+          <td><input id="username" type="text" name="user[username]" value="<%= user.escape('username') %>"></td>
+        </tr>
+        <tr>
+          <td><label for="real-name">Your Name:</label></td>
+          <td><input id="real-name" type="text" name="user[real_name]" value="<%= user.escape('real_name') %>"></td>
+        </tr>
+        <tr>
+          <td><label for="age">Age:</label></td>
+          <td><input id="age" type="number" name="user[age]" value="<%= user.escape('age') %>"></td>
+        </tr>
+        <tr>
+          <td><label for="age_min">Minimum target age:</label></td>
+          <td><input id="age_min" type="number" name="user[age_min]" value="<%= user.get('age_min') %>"></td>
+        </tr>
+        <tr>
+          <td><label for="age_max">Max target age:</label></td>
+          <td><input id="age_max" type="number" name="user[age_max]" value="<%= user.get('age_max') %>"></td>
+        </tr>
+      </table>
+      <button class="btn" id="submit-update">Update</button>
+    </form>
     <br>
-    <label for="real-name">Your Name:</label>
-    <input id="real-name" type="text" name="user[real_name]" value="<%= user.escape('real_name') %>">
-    <br>
-    <label for="age">Age:</label>
-    <input id="age" type="number" name="user[age]" value="<%= user.escape('age') %>">
-    <br>
-    <label for="age_min">Minimum target age:</label>
-    <input id="age_min" type="number" name="user[age_min]" value="<%= user.get('age_min') %>">
-    <br>
-    <label for="age_max">Max target age:</label>
-    <input id="age_max" type="number" name="user[age_max]" value="<%= user.get('age_max') %>">
-    <br>
-    <button class="btn" id="submit-update">Update</button>
-  </form>
 </div>
