--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
   <title>breedly</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= stylesheet_link_tag    'jquery-ui.min', media: 'all' %>
+  <%= stylesheet_link_tag    'jquery-ui.structure.min', media: 'all' %>
+  <%= stylesheet_link_tag    'jquery-ui.theme.min', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
